--- a/20150731-081156-rs2.2B-sthlmBeamerTemplate.tex
+++ b/20150731-081156-rs2.2B-sthlmBeamerTemplate.tex
@@ -215,7 +215,7 @@ unlabeled data, which is often abundant and cheap to collect
 in mobile systems using crowdsourcing. Figure \ref{fig:training} shows the
 layer-wise tuning of a deep model.}
 
-			\item{First one layers pf neurons is trained using the unlabeled data samples. To learn the input data structure, each layer includes encoding and decoding functions.}
+			\item{First one layers of neurons is trained using the unlabeled data samples. To learn the input data structure, each layer includes encoding and decoding functions.}
             
             \vspace{1em}
             
@@ -397,6 +397,17 @@ Activity recognition is applied to time series data frames formulated using a sl
       \item{\textit{The framework enables the tuning of deep models with many hidden layers and millions of parameters on a computing cluster}}
       \item{\textit{The framework has been validated using a large-scale activity recognition system as a case study}}
   \end{itemize}
+\end{frame}
+
+\section{Future Work}
+
+\begin{frame}{Future Work}
+\begin{itemize}
+	\item{\alert{Crowd Labeling of MBD}
+    }
+    \item{\alert{Economics of MBD}}
+    \item{\alert{Privacy and MBD Collection}}
+\end{itemize}
 \end{frame}
 
 \section{Thank you all!  Any Questions?}
